Change model ids and names to fit naming convention #1

--- a/code/analysis/additives_CGXII.ipynb
+++ b/code/analysis/additives_CGXII.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1115.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1115FB23.xml')\n",
     "CGXII_comp_16 = pd.read_csv('../../analysis/CGXII_base_medium/CGXII_comp_16.csv').set_index('exchange').to_dict()['flux']"
    ]
   },
@@ -185,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fda_1115\n",
+      "iCstr1115FB23\n",
       "Growth rate without additives: 0.8025\n",
       "Doubling time without additives: 51.82 min\n"
      ]
@@ -258,7 +258,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1115.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1115FB23.xml')\n",
     "enhanced_growth(model, CGXII_comp_16, CasA)"
    ]
   },
@@ -313,13 +313,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[39m=\u001b[39m rg\u001b[39m.\u001b[39mio\u001b[39m.\u001b[39mload_model_cobra(\u001b[39m'\u001b[39m\u001b[39m../../models/Cstr_1115.xml\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m enhanced_growth(model, CGXII_base, CasA)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(CasA)\n",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[39m=\u001b[39m rg\u001b[39m.\u001b[39mio\u001b[39m.\u001b[39mload_model_cobra(\u001b[39m'\u001b[39m\u001b[39m../../models/iCstr1115FB23.xml\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m enhanced_growth(model, CGXII_base, CasA)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(CasA)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'rg' is not defined"
      ]
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1115.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1115FB23.xml')\n",
     "enhanced_growth(model, CGXII_base, CasA)"
    ]
   },
@@ -337,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1197.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1197FB23.xml')\n",
     "CGXII_comp_15 = pd.read_csv('../../analysis/CGXII_base_medium/CGXII_comp_15.csv').set_index('exchange').to_dict()['flux']"
    ]
   },
@@ -350,7 +350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fda_1197\n",
+      "iCstr1197FB23\n",
       "Growth rate without additives: 0.5522\n",
       "Doubling time without additives: 75.31 min\n",
       "| exchange    |     diff |\n",
@@ -418,7 +418,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1197.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1197FB23.xml')\n",
     "enhanced_growth(model, CGXII_comp_15, CasA)"
    ]
   },
@@ -457,7 +457,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1197.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1197FB23.xml')\n",
     "enhanced_growth(model, CGXII_base, CasA)"
    ]
   },
@@ -475,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_TS.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1054FB23.xml')\n",
     "CGXII_comp_14 = pd.read_csv('../../analysis/CGXII_base_medium/CGXII_comp_14.csv').set_index('exchange').to_dict()['flux']"
    ]
   },
@@ -488,7 +488,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fda_1054\n",
+      "iCstr1054FB23\n",
       "Growth rate without additives: 0.5485\n",
       "Doubling time without additives: 75.82 min\n",
       "| exchange    |     diff |\n",
@@ -549,7 +549,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_TS.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1054FB23.xml')\n",
     "enhanced_growth(model, CGXII_comp_14, CasA)"
    ]
   },
@@ -581,7 +581,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_TS.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1054FB23.xml')\n",
     "enhanced_growth(model, CGXII_base, CasA)"
    ]
   },
@@ -599,7 +599,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1116.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1116FB23.xml')\n",
     "CGXII_comp_17 = pd.read_csv('../../analysis/CGXII_base_medium/CGXII_comp_17.csv').set_index('exchange').to_dict()['flux']"
    ]
   },
@@ -612,7 +612,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fda_1116\n",
+      "iCstr1116FB23\n",
       "Growth rate without additives: 0.0\n",
       "Doubling time without additives: inf min\n"
      ]
@@ -711,7 +711,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1116.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1116FB23.xml')\n",
     "enhanced_growth(model, CGXII_comp_17, CasA)"
    ]
   },
@@ -775,7 +775,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1116.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1116FB23.xml')\n",
     "enhanced_growth(model, CGXII_comp_17, CasA)"
    ]
   },
@@ -816,7 +816,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1116.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1116FB23.xml')\n",
     "enhanced_growth(model, CGXII_base, CasA)"
    ]
   },
@@ -835,7 +835,7 @@
    "outputs": [],
    "source": [
     "CasA = rg.io.load_all_media_from_db('../../../refinegems/data/media_db.csv')[9]['BiGG_EX'].to_list()\n",
-    "modelpaths = ['../../models/Cstr_TS.xml', '../../models/Cstr_1197.xml', '../../models/Cstr_1115.xml', '../../models/Cstr_1116.xml']\n",
+    "modelpaths = ['../../models/iCstr1054FB23.xml', '../../models/iCstr1197FB23.xml', '../../models/iCstr1115FB23.xml', '../../models/iCstr1116FB23.xml']\n",
     "cmods = [rg.io.load_model_cobra(path) for path in modelpaths]\n",
     "cgx_paths = ['../../analysis/CGXII_base_medium/CGXII_comp_14.csv', '../../analysis/CGXII_base_medium/CGXII_comp_15.csv', '../../analysis/CGXII_base_medium/CGXII_comp_16.csv', '../../analysis/CGXII_base_medium/CGXII_comp_17.csv']\n",
     "cgx_bases = [pd.read_csv(path).set_index('exchange').to_dict()['flux'] for path in cgx_paths]\n",
@@ -851,10 +851,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fda_1054\n",
+      "iCstr1054FB23\n",
       "Growth rate with additives: 0.6354\n",
       "Doubling time with additives: 65.45 min\n",
-      "fda_1197\n"
+      "iCstr1197FB23\n"
      ]
     },
     {
@@ -873,10 +873,10 @@
      "text": [
       "Growth rate with additives: 0.0\n",
       "Doubling time with additives: inf min\n",
-      "fda_1115\n",
+      "iCstr1115FB23\n",
       "Growth rate with additives: 0.0\n",
       "Doubling time with additives: inf min\n",
-      "fda_1116\n",
+      "iCstr1116FB23\n",
       "Growth rate with additives: 0.0\n",
       "Doubling time with additives: inf min\n"
      ]
