--- a/code/analysis/growth_requirements.ipynb
+++ b/code/analysis/growth_requirements.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelpaths = ['../../models/Cstr_TS.xml', '../../models/Cstr_1197.xml', '../../models/Cstr_1115.xml', '../../models/Cstr_1116.xml']\n",
+    "modelpaths = ['../../models/iCstr1054FB23.xml', '../../models/iCstr1197FB23.xml', '../../models/iCstr1115FB23.xml', '../../models/iCstr1116FB23.xml']\n",
     "cmods = [rg.io.load_model_cobra(path) for path in modelpaths]"
    ]
   },
@@ -122,7 +122,7 @@
      "output_type": "stream",
      "text": [
       "{'EX_2pglyc_e': 0.0986092999917973, 'EX_ca2_e': 0.0005205, 'EX_chols_e': 0.0250625999998419, 'EX_cl_e': 0.0005205, 'EX_cobalt2_e': 1e-05, 'EX_cu2_e': 7.09e-05, 'EX_glyglygln_e': 135.2566503614603, 'EX_k_e': 0.0195193, 'EX_mg2_e': 0.0008675, 'EX_mn2_e': 6.91e-05, 'EX_o2_e': 860.4240884351017, 'EX_salchs4fe_e': 0.2942146547067068, 'EX_zn2_e': 3.41e-05}\n",
-      "Investigate minimal medium of strain fda_1054\n",
+      "Investigate minimal medium of strain iCstr1054FB23\n",
       "Doubling time with standard fluxes:\n",
       "415.8883084145069\n",
       "Doubling time with 10.0 as flux:\n",
@@ -290,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulate carbon sources of strain fda_1116\n",
+      "Simulate carbon sources of strain iCstr1116FB23\n",
       "EX_male_e not in model\n",
       "EX_22bipy_e not in model\n",
       "EX_boricacid_e not in model\n",
