--- a/code/analysis/knockout_studies.ipynb
+++ b/code/analysis/knockout_studies.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelname = 'Cstr_KC-Na-01'\n",
+    "modelname = 'Cstr_iCstrKCNa01FB23'\n",
     "modelpath = '../../models/' + modelname + '.xml'\n",
     "model_lib = rg.io.load_model_libsbml(modelpath)\n",
     "model = rg.io.load_model_cobra(modelpath)"
@@ -270,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelnames = ['TS', '1197', '1115', '1116', 'KC-Na-01']\n",
+    "modelnames = ['TS', '1197', '1115', '1116', 'iCstrKCNa01FB23']\n",
     "reacs = {name: pd.read_csv('../../analysis/essentiality/Cstr_' + name + '_ess_genes.csv')['reaction'] for name in modelnames}"
    ]
   },
@@ -281,7 +281,7 @@
    "outputs": [],
    "source": [
     "reacs_df = pd.DataFrame(reacs)\n",
-    "overlap = list(set(reacs_df['TS']).intersection(set(reacs_df['1197'])).intersection(set(reacs_df['1115'])).intersection(set(reacs_df['1116'])).intersection(set(reacs_df['KC-Na-01'])))"
+    "overlap = list(set(reacs_df['TS']).intersection(set(reacs_df['1197'])).intersection(set(reacs_df['1115'])).intersection(set(reacs_df['1116'])).intersection(set(reacs_df['iCstrKCNa01FB23'])))"
    ]
   },
   {
@@ -881,7 +881,7 @@
        "      <th>1197</th>\n",
        "      <th>1115</th>\n",
        "      <th>1116</th>\n",
-       "      <th>KC-Na-01</th>\n",
+       "      <th>iCstrKCNa01FB23</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -944,7 +944,7 @@
        "3  lcl_CP068158_1_prot_QQU76600_1_2146   lcl_CP068157_1_prot_QQU79669_1_209   \n",
        "4  lcl_CP068158_1_prot_QQU76985_1_2585  lcl_CP068157_1_prot_QQU80448_1_1078   \n",
        "\n",
-       "         KC-Na-01  \n",
+       "         iCstrKCNa01FB23  \n",
        "0  WP_086890747_1  \n",
        "1  WP_086891472_1  \n",
        "2  WP_086892492_1  \n",
@@ -997,7 +997,7 @@
        "      <th>1197</th>\n",
        "      <th>1115</th>\n",
        "      <th>1116</th>\n",
-       "      <th>KC-Na-01</th>\n",
+       "      <th>iCstrKCNa01FB23</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1046,7 +1046,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        TS     1197        1115      1116  KC-Na-01\n",
+       "        TS     1197        1115      1116  iCstrKCNa01FB23\n",
        "0  R_NDPK1   R_DHFS      R_ASAD  R_UDCPDP  R_PRAGSr\n",
        "1  R_NDPK2   R_SHKK    R_UAAGDS  R_MECDPS  R_PTPATi\n",
        "2  R_NDPK3  R_RBFSa     R_ASPO5  R_DXPRIi  R_SUCBZS\n",
@@ -1121,7 +1121,7 @@
        "      <td>105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>KC-Na-01</th>\n",
+       "      <th>iCstrKCNa01FB23</th>\n",
        "      <td>63</td>\n",
        "      <td>125</td>\n",
        "    </tr>\n",
@@ -1135,7 +1135,7 @@
        "1197                   62                  135\n",
        "1115                   65                  118\n",
        "1116                   64                  105\n",
-       "KC-Na-01               63                  125"
+       "iCstrKCNa01FB23               63                  125"
       ]
      },
      "execution_count": 95,
@@ -1145,8 +1145,8 @@
    ],
    "source": [
     "numbers = pd.DataFrame(index=modelnames)\n",
-    "numbers['essential genes'] = [genes_df['TS'].dropna().size, genes_df['1197'].dropna().size, genes_df['1115'].dropna().size, genes_df['1116'].dropna().size, genes_df['KC-Na-01'].dropna().size]\n",
-    "numbers['essential reactions'] = [reac_df['TS'].dropna().size, reac_df['1197'].dropna().size, reac_df['1115'].dropna().size, reac_df['1116'].dropna().size, reac_df['KC-Na-01'].dropna().size]\n",
+    "numbers['essential genes'] = [genes_df['TS'].dropna().size, genes_df['1197'].dropna().size, genes_df['1115'].dropna().size, genes_df['1116'].dropna().size, genes_df['iCstrKCNa01FB23'].dropna().size]\n",
+    "numbers['essential reactions'] = [reac_df['TS'].dropna().size, reac_df['1197'].dropna().size, reac_df['1115'].dropna().size, reac_df['1116'].dropna().size, reac_df['iCstrKCNa01FB23'].dropna().size]\n",
     "numbers"
    ]
   },
@@ -1165,8 +1165,8 @@
    "outputs": [],
    "source": [
     "models = {name: list(rg.investigate.initial_analysis(rg.io.load_model_libsbml('../../models/Cstr_' + name + '.xml'))) for name in modelnames}\n",
-    "numbers['total genes'] = [models['TS'][3], models['1197'][3], models['1115'][3], models['1116'][3], models['KC-Na-01'][3]]\n",
-    "numbers['total reactions'] = [models['TS'][1], models['1197'][1], models['1115'][1], models['1116'][1], models['KC-Na-01'][1]]"
+    "numbers['total genes'] = [models['TS'][3], models['1197'][3], models['1115'][3], models['1116'][3], models['iCstrKCNa01FB23'][3]]\n",
+    "numbers['total reactions'] = [models['TS'][1], models['1197'][1], models['1115'][1], models['1116'][1], models['iCstrKCNa01FB23'][1]]"
    ]
   },
   {
@@ -1285,7 +1285,7 @@
    "source": [
     "numbers['percentage genes'] = (numbers['essential genes'] / numbers['total genes']) * 100\n",
     "numbers['percentage reactions'] = (numbers['essential reactions'] / numbers['total reactions']) * 100\n",
-    "numbers = numbers.rename({'KC-Na-01': 'KC'}, axis=0)\n",
+    "numbers = numbers.rename({'iCstrKCNa01FB23': 'KC'}, axis=0)\n",
     "numbers"
    ]
   },
@@ -1538,7 +1538,7 @@
    "source": [
     "sbos_df = pd.DataFrame({name: reac_df[name].dropna().apply(get_reaction_sbo_per_mod, model=rg.io.load_model_libsbml('../../models/Cstr_' + name + '.xml')) for name in modelnames})\n",
     "sbos_num = pd.DataFrame({name: sbos_df[name].str.get_dummies().sum().to_dict() for name in modelnames}).replace({np.nan: 0})\n",
-    "sbos_num = sbos_num.rename({'KC-Na-01': 'KC'}, axis=1)\n",
+    "sbos_num = sbos_num.rename({'iCstrKCNa01FB23': 'KC'}, axis=1)\n",
     "sbos_num"
    ]
   },
