--- a/code/analysis/visualization.ipynb
+++ b/code/analysis/visualization.ipynb
@@ -28,10 +28,10 @@
     "import seaborn as sns\n",
     "from PARAMS import *\n",
     "\n",
-    "STRAINS = {'fda_1054':'TS', \n",
-    "            'fda_1197':'1197',\n",
-    "            'fda_1115':'1115',\n",
-    "            'fda_1116':'1116',\n",
+    "STRAINS = {'iCstr1054FB23':'TS', \n",
+    "            'iCstr1197FB23':'1197',\n",
+    "            'iCstr1115FB23':'1115',\n",
+    "            'iCstr1116FB23':'1116',\n",
     "            'KC_Na_01':'KC',\n",
     "            }\n",
     "STRAINS_LAB = {'14':'TS', \n",
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = ['../../models/Cstr_TS.xml','../../models/Cstr_1197.xml', '../../models/Cstr_1115.xml','../../models/Cstr_1116.xml','../../models/Cstr_KC-Na-01.xml']\n",
+    "models = ['../../models/iCstr1054FB23.xml','../../models/iCstr1197FB23.xml', '../../models/iCstr1115FB23.xml','../../models/iCstr1116FB23.xml','../../models/iCstrKCNa01FB23.xml']\n",
     "cmods = [rg.io.load_model_cobra(mod) for mod in models]\n",
     "mods = [rg.io.load_model_libsbml(mod) for mod in models] "
    ]
