--- a/code/curation/remove_duplicate_reactions.ipynb
+++ b/code/curation/remove_duplicate_reactions.ipynb
@@ -68,13 +68,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod_14 = load_model_libsbml('../../models/Cstr_TS.xml')\n",
+    "mod_14 = load_model_libsbml('../../models/iCstr1054FB23.xml')\n",
     "reac_14 = mod_14.getListOfReactions()\n",
-    "mod_15 = load_model_libsbml('../../models/Cstr_1197.xml')\n",
+    "mod_15 = load_model_libsbml('../../models/iCstr1197FB23.xml')\n",
     "reac_15 = mod_15.getListOfReactions()\n",
-    "mod_16 = load_model_libsbml('../../models/Cstr_1115.xml')\n",
+    "mod_16 = load_model_libsbml('../../models/iCstr1115FB23.xml')\n",
     "reac_16 = mod_16.getListOfReactions()\n",
-    "mod_17 = load_model_libsbml('../../models/Cstr_1116.xml')\n",
+    "mod_17 = load_model_libsbml('../../models/iCstr1116FB23.xml')\n",
     "reac_17 = mod_17.getListOfReactions()"
    ]
   },
@@ -100,10 +100,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "writeSBMLToFile(mod_14.getSBMLDocument(),'../../models/Cstr_TS.xml')\n",
-    "writeSBMLToFile(mod_15.getSBMLDocument(),'../../models/Cstr_1197.xml')\n",
-    "writeSBMLToFile(mod_16.getSBMLDocument(),'../../models/Cstr_1115.xml')\n",
-    "writeSBMLToFile(mod_17.getSBMLDocument(),'../../models/Cstr_1116.xml')"
+    "writeSBMLToFile(mod_14.getSBMLDocument(),'../../models/iCstr1054FB23.xml')\n",
+    "writeSBMLToFile(mod_15.getSBMLDocument(),'../../models/iCstr1197FB23.xml')\n",
+    "writeSBMLToFile(mod_16.getSBMLDocument(),'../../models/iCstr1115FB23.xml')\n",
+    "writeSBMLToFile(mod_17.getSBMLDocument(),'../../models/iCstr1116FB23.xml')"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelpaths_to_change = ['../../models/Cstr_TS.xml', '../../models/Cstr_1197.xml', '../../models/Cstr_1115.xml', '../../models/Cstr_1116.xml']\n",
+    "modelpaths_to_change = ['../../models/iCstr1054FB23.xml', '../../models/iCstr1197FB23.xml', '../../models/iCstr1115FB23.xml', '../../models/iCstr1116FB23.xml']\n",
     "for mod in modelpaths_to_change:\n",
     "    model = load_model_cobra(mod)\n",
     "    try:\n",
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelpaths_to_change = ['../../models/Cstr_TS.xml', '../../models/Cstr_1197.xml', '../../models/Cstr_1115.xml', '../../models/Cstr_1116.xml']\n",
+    "modelpaths_to_change = ['../../models/iCstr1054FB23.xml', '../../models/iCstr1197FB23.xml', '../../models/iCstr1115FB23.xml', '../../models/iCstr1116FB23.xml']\n",
     "for mod in modelpaths_to_change:\n",
     "    model = load_model_cobra(mod)\n",
     "    print(model.reactions.get_by_id('GNKr'))\n",
