--- a/code/curation/wetlab_transfer.ipynb
+++ b/code/curation/wetlab_transfer.ipynb
@@ -83,11 +83,11 @@
    "outputs": [],
    "source": [
     "modelpaths = [\n",
-    "        '../../models/Cstr_TS.xml', \n",
-    "        '../../models/Cstr_1197.xml',\n",
-    "        '../../models/Cstr_1115.xml',\n",
-    "        '../../models/Cstr_1116.xml',\n",
-    "        '../../models/Cstr_KC-Na-01.xml',\n",
+    "        '../../models/iCstr1054FB23.xml', \n",
+    "        '../../models/iCstr1197FB23.xml',\n",
+    "        '../../models/iCstr1115FB23.xml',\n",
+    "        '../../models/iCstr1116FB23.xml',\n",
+    "        '../../models/iCstrKCNa01FB23.xml',\n",
     "        ]\n",
     "\n",
     "all_models = [rg.io.load_model_cobra(path) for path in modelpaths]"
@@ -136,10 +136,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The metabolite na1_e is in fda_1054\n",
-      "The metabolite na1_e is in fda_1197\n",
-      "The metabolite na1_e is in fda_1115\n",
-      "The metabolite na1_e is in fda_1116\n",
+      "The metabolite na1_e is in iCstr1054FB23\n",
+      "The metabolite na1_e is in iCstr1197FB23\n",
+      "The metabolite na1_e is in iCstr1115FB23\n",
+      "The metabolite na1_e is in iCstr1116FB23\n",
       "The metabolite na1_e is in KC_Na_01\n"
      ]
     }
@@ -162,21 +162,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Synchronize annotations for all compartments for fda_1054\n",
-      "Add BiGG ID of EX_na1_e as CVTerm to fda_1054\n",
-      "Modified model written to ../../models/Cstr_TS.xml\n",
-      "Synchronize annotations for all compartments for fda_1197\n",
-      "Add BiGG ID of EX_na1_e as CVTerm to fda_1197\n",
-      "Modified model written to ../../models/Cstr_1197.xml\n",
-      "Synchronize annotations for all compartments for fda_1115\n",
-      "Add BiGG ID of EX_na1_e as CVTerm to fda_1115\n",
-      "Modified model written to ../../models/Cstr_1115.xml\n",
-      "Synchronize annotations for all compartments for fda_1116\n",
-      "Add BiGG ID of EX_na1_e as CVTerm to fda_1116\n",
-      "Modified model written to ../../models/Cstr_1116.xml\n",
+      "Synchronize annotations for all compartments for iCstr1054FB23\n",
+      "Add BiGG ID of EX_na1_e as CVTerm to iCstr1054FB23\n",
+      "Modified model written to ../../models/iCstr1054FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1197FB23\n",
+      "Add BiGG ID of EX_na1_e as CVTerm to iCstr1197FB23\n",
+      "Modified model written to ../../models/iCstr1197FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1115FB23\n",
+      "Add BiGG ID of EX_na1_e as CVTerm to iCstr1115FB23\n",
+      "Modified model written to ../../models/iCstr1115FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1116FB23\n",
+      "Add BiGG ID of EX_na1_e as CVTerm to iCstr1116FB23\n",
+      "Modified model written to ../../models/iCstr1116FB23.xml\n",
       "Synchronize annotations for all compartments for KC_Na_01\n",
       "Add BiGG ID of EX_na1_e as CVTerm to KC_Na_01\n",
-      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
+      "Modified model written to ../../models/iCstrKCNa01FB23.xml\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to add extracellular Nickel to the model of strain KC-Na-01."
+    "We need to add extracellular Nickel to the model of strain iCstrKCNa01FB23."
    ]
   },
   {
@@ -252,26 +252,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EX_ni2_e already exists in fda_1054.\n",
-      "EX_ni2_e already exists in fda_1197.\n",
-      "EX_ni2_e already exists in fda_1115.\n",
-      "EX_ni2_e already exists in fda_1116.\n",
+      "EX_ni2_e already exists in iCstr1054FB23.\n",
+      "EX_ni2_e already exists in iCstr1197FB23.\n",
+      "EX_ni2_e already exists in iCstr1115FB23.\n",
+      "EX_ni2_e already exists in iCstr1116FB23.\n",
       "EX_ni2_e already exists in KC_Na_01.\n",
-      "Synchronize annotations for all compartments for fda_1054\n",
-      "Add BiGG ID of EX_ni2_e as CVTerm to fda_1054\n",
-      "Modified model written to ../../models/Cstr_TS.xml\n",
-      "Synchronize annotations for all compartments for fda_1197\n",
-      "Add BiGG ID of EX_ni2_e as CVTerm to fda_1197\n",
-      "Modified model written to ../../models/Cstr_1197.xml\n",
-      "Synchronize annotations for all compartments for fda_1115\n",
-      "Add BiGG ID of EX_ni2_e as CVTerm to fda_1115\n",
-      "Modified model written to ../../models/Cstr_1115.xml\n",
-      "Synchronize annotations for all compartments for fda_1116\n",
-      "Add BiGG ID of EX_ni2_e as CVTerm to fda_1116\n",
-      "Modified model written to ../../models/Cstr_1116.xml\n",
+      "Synchronize annotations for all compartments for iCstr1054FB23\n",
+      "Add BiGG ID of EX_ni2_e as CVTerm to iCstr1054FB23\n",
+      "Modified model written to ../../models/iCstr1054FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1197FB23\n",
+      "Add BiGG ID of EX_ni2_e as CVTerm to iCstr1197FB23\n",
+      "Modified model written to ../../models/iCstr1197FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1115FB23\n",
+      "Add BiGG ID of EX_ni2_e as CVTerm to iCstr1115FB23\n",
+      "Modified model written to ../../models/iCstr1115FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1116FB23\n",
+      "Add BiGG ID of EX_ni2_e as CVTerm to iCstr1116FB23\n",
+      "Modified model written to ../../models/iCstr1116FB23.xml\n",
       "Synchronize annotations for all compartments for KC_Na_01\n",
       "Add BiGG ID of EX_ni2_e as CVTerm to KC_Na_01\n",
-      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
+      "Modified model written to ../../models/iCstrKCNa01FB23.xml\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to add extracellular biotin to 1115 (Cstr_16), 1116 (Cstr_17) and KC-Na-01 (Cstr_KC-Na-01)."
+    "We need to add extracellular biotin to 1115 (Cstr_16), 1116 (Cstr_17) and iCstrKCNa01FB23 (Cstr_iCstrKCNa01FB23)."
    ]
   },
   {
@@ -340,26 +340,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EX_btn_e already exists in fda_1054.\n",
-      "EX_btn_e already exists in fda_1197.\n",
-      "EX_btn_e already exists in fda_1115.\n",
-      "EX_btn_e already exists in fda_1116.\n",
+      "EX_btn_e already exists in iCstr1054FB23.\n",
+      "EX_btn_e already exists in iCstr1197FB23.\n",
+      "EX_btn_e already exists in iCstr1115FB23.\n",
+      "EX_btn_e already exists in iCstr1116FB23.\n",
       "EX_btn_e already exists in KC_Na_01.\n",
-      "Synchronize annotations for all compartments for fda_1054\n",
-      "Add BiGG ID of EX_btn_e as CVTerm to fda_1054\n",
-      "Modified model written to ../../models/Cstr_TS.xml\n",
-      "Synchronize annotations for all compartments for fda_1197\n",
-      "Add BiGG ID of EX_btn_e as CVTerm to fda_1197\n",
-      "Modified model written to ../../models/Cstr_1197.xml\n",
-      "Synchronize annotations for all compartments for fda_1115\n",
-      "Add BiGG ID of EX_btn_e as CVTerm to fda_1115\n",
-      "Modified model written to ../../models/Cstr_1115.xml\n",
-      "Synchronize annotations for all compartments for fda_1116\n",
-      "Add BiGG ID of EX_btn_e as CVTerm to fda_1116\n",
-      "Modified model written to ../../models/Cstr_1116.xml\n",
+      "Synchronize annotations for all compartments for iCstr1054FB23\n",
+      "Add BiGG ID of EX_btn_e as CVTerm to iCstr1054FB23\n",
+      "Modified model written to ../../models/iCstr1054FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1197FB23\n",
+      "Add BiGG ID of EX_btn_e as CVTerm to iCstr1197FB23\n",
+      "Modified model written to ../../models/iCstr1197FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1115FB23\n",
+      "Add BiGG ID of EX_btn_e as CVTerm to iCstr1115FB23\n",
+      "Modified model written to ../../models/iCstr1115FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1116FB23\n",
+      "Add BiGG ID of EX_btn_e as CVTerm to iCstr1116FB23\n",
+      "Modified model written to ../../models/iCstr1116FB23.xml\n",
       "Synchronize annotations for all compartments for KC_Na_01\n",
       "Add BiGG ID of EX_btn_e as CVTerm to KC_Na_01\n",
-      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
+      "Modified model written to ../../models/iCstrKCNa01FB23.xml\n"
      ]
     }
    ],
@@ -470,26 +470,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EX_34dhbz_e already exists in fda_1054.\n",
-      "EX_34dhbz_e already exists in fda_1197.\n",
-      "EX_34dhbz_e already exists in fda_1115.\n",
-      "EX_34dhbz_e already exists in fda_1116.\n",
+      "EX_34dhbz_e already exists in iCstr1054FB23.\n",
+      "EX_34dhbz_e already exists in iCstr1197FB23.\n",
+      "EX_34dhbz_e already exists in iCstr1115FB23.\n",
+      "EX_34dhbz_e already exists in iCstr1116FB23.\n",
       "EX_34dhbz_e already exists in KC_Na_01.\n",
-      "Synchronize annotations for all compartments for fda_1054\n",
-      "Add BiGG ID of EX_34dhbz_e as CVTerm to fda_1054\n",
-      "Modified model written to ../../models/Cstr_TS.xml\n",
-      "Synchronize annotations for all compartments for fda_1197\n",
-      "Add BiGG ID of EX_34dhbz_e as CVTerm to fda_1197\n",
-      "Modified model written to ../../models/Cstr_1197.xml\n",
-      "Synchronize annotations for all compartments for fda_1115\n",
-      "Add BiGG ID of EX_34dhbz_e as CVTerm to fda_1115\n",
-      "Modified model written to ../../models/Cstr_1115.xml\n",
-      "Synchronize annotations for all compartments for fda_1116\n",
-      "Add BiGG ID of EX_34dhbz_e as CVTerm to fda_1116\n",
-      "Modified model written to ../../models/Cstr_1116.xml\n",
+      "Synchronize annotations for all compartments for iCstr1054FB23\n",
+      "Add BiGG ID of EX_34dhbz_e as CVTerm to iCstr1054FB23\n",
+      "Modified model written to ../../models/iCstr1054FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1197FB23\n",
+      "Add BiGG ID of EX_34dhbz_e as CVTerm to iCstr1197FB23\n",
+      "Modified model written to ../../models/iCstr1197FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1115FB23\n",
+      "Add BiGG ID of EX_34dhbz_e as CVTerm to iCstr1115FB23\n",
+      "Modified model written to ../../models/iCstr1115FB23.xml\n",
+      "Synchronize annotations for all compartments for iCstr1116FB23\n",
+      "Add BiGG ID of EX_34dhbz_e as CVTerm to iCstr1116FB23\n",
+      "Modified model written to ../../models/iCstr1116FB23.xml\n",
       "Synchronize annotations for all compartments for KC_Na_01\n",
       "Add BiGG ID of EX_34dhbz_e as CVTerm to KC_Na_01\n",
-      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
+      "Modified model written to ../../models/iCstrKCNa01FB23.xml\n"
      ]
     }
    ],
@@ -515,11 +515,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modified model written to ../../models/Cstr_TS.xml\n",
-      "Modified model written to ../../models/Cstr_1197.xml\n",
-      "Modified model written to ../../models/Cstr_1115.xml\n",
-      "Modified model written to ../../models/Cstr_1116.xml\n",
-      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
+      "Modified model written to ../../models/iCstr1054FB23.xml\n",
+      "Modified model written to ../../models/iCstr1197FB23.xml\n",
+      "Modified model written to ../../models/iCstr1115FB23.xml\n",
+      "Modified model written to ../../models/iCstr1116FB23.xml\n",
+      "Modified model written to ../../models/iCstrKCNa01FB23.xml\n"
      ]
     }
    ],
