--- a/code/analysis/exploration_CGXII.ipynb
+++ b/code/analysis/exploration_CGXII.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_TS.xml')"
+    "model = rg.io.load_model_cobra('../../models/iCstr1054FB23.xml')"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "model = rg.load.load_model_cobra('../models/Cstr_1115.xml')"
+    "model = rg.load.load_model_cobra('../models/iCstr1115FB23.xml')"
    ]
   },
   {
@@ -620,7 +620,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.load.load_model_cobra('../models/Cstr_1116.xml')"
+    "model = rg.load.load_model_cobra('../models/iCstr1116FB23.xml')"
    ]
   },
   {
@@ -705,7 +705,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.load.load_model_cobra('../models/Cstr_1197.xml')"
+    "model = rg.load.load_model_cobra('../models/iCstr1197FB23.xml')"
    ]
   },
   {
