--- a/code/analysis/growth_M9_all.ipynb
+++ b/code/analysis/growth_M9_all.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1197.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1197FB23.xml')\n",
     "M9_med['EX_ala_B_e'] = 10.0\n",
     "M9_med['EX_cgly_e'] = 10.0\n",
     "#M9_med['EX_glc__D_e'] = 20.0"
@@ -262,7 +262,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_TS.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1054FB23.xml')\n",
     "M9_med.pop('EX_ala_B_e')\n",
     "M9_med.pop('EX_cgly_e')"
    ]
@@ -416,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1115.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1115FB23.xml')\n",
     "M9_med['EX_ala_B_e'] = 10.0\n",
     "M9_med['EX_cgly_e'] = 10.0"
    ]
@@ -613,7 +613,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_1116.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/iCstr1116FB23.xml')\n",
     "M9_med['EX_nmn_e'] = 10.0\n",
     "M9_med['EX_s_e'] = 10.0\n",
     "#M9_med.pop('EX_cgly_e')\n",
