--- a/code/curation/DEPR_add_charges.ipynb
+++ b/code/curation/DEPR_add_charges.ipynb
@@ -41,7 +41,7 @@
     "example_model = load_model_libsbml(example_path)\n",
     "print(example_model.getId())\n",
     "\n",
-    "modelpaths_to_change = ['../../../../models/Cstr_TS.xml', '../../../../models/Cstr_1197.xml', '../../../../models/Cstr_1115.xml', '../../../../models/Cstr_1116.xml']\n",
+    "modelpaths_to_change = ['../../../../models/iCstr1054FB23.xml', '../../../../models/iCstr1197FB23.xml', '../../../../models/iCstr1115FB23.xml', '../../../../models/iCstr1116FB23.xml']\n",
     "\n",
     "for path_to_change in modelpaths_to_change:\n",
     "    model_to_change = load_model_libsbml(path_to_change)\n",
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '../../../../models/Cstr_TS.xml'\n",
+    "path = '../../../../models/iCstr1054FB23.xml'\n",
     "model = load_model_libsbml(path)\n",
     "print(get_metab_without_charge(model.getListOfSpecies()))"
    ]
@@ -159,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelpaths = ['../../models/Cstr_TS.xml', '../../models/Cstr_1197.xml', '../../models/Cstr_1115.xml', '../../models/Cstr_1116.xml']\n",
+    "modelpaths = ['../../models/iCstr1054FB23.xml', '../../models/iCstr1197FB23.xml', '../../models/iCstr1115FB23.xml', '../../models/iCstr1116FB23.xml']\n",
     "\n",
     "for path in modelpaths:\n",
     "    model = load_model_libsbml(path)\n",
