--- a/code/curation/apply_mcc.ipynb
+++ b/code/curation/apply_mcc.ipynb
@@ -16983,7 +16983,7 @@
     }
    ],
    "source": [
-    "model_path = '../../models/Cstr_1116.xml'\n",
+    "model_path = '../../models/iCstr1116FB23.xml'\n",
     "balancer = MassChargeCuration(model_path, run_optimization = True, update_ids = True, data_path='../../data/mcc/') #\n",
     "balancer.generate_visual_report().show()"
    ]
@@ -17558,7 +17558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = '../../models/Cstr_TS.xml'\n",
+    "model_path = '../../models/iCstr1054FB23.xml'\n",
     "balancer = MassChargeCuration(model_path, run_optimization = True, update_ids = True, data_path='../../data/mcc/') #\n",
     "balancer.generate_visual_report().show()"
    ]
@@ -17589,7 +17589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = '../../models/Cstr_1197.xml'\n",
+    "model_path = '../../models/iCstr1197FB23.xml'\n",
     "balancer = MassChargeCuration(model_path, run_optimization = True, update_ids = True, data_path='../../data/mcc/') #\n",
     "balancer.generate_visual_report().show()"
    ]
@@ -17620,7 +17620,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = '../../models/Cstr_1115.xml'\n",
+    "model_path = '../../models/iCstr1115FB23.xml'\n",
     "balancer = MassChargeCuration(model_path, run_optimization = True, update_ids = True, data_path='../../data/mcc/') #\n",
     "balancer.generate_visual_report().show()"
    ]
@@ -17642,7 +17642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Strain KC-Na-01"
+    "## Strain iCstrKCNa01FB23"
    ]
   },
   {
@@ -17651,7 +17651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = '../../models/Cstr_KC-Na-01.xml'\n",
+    "model_path = '../../models/iCstrKCNa01FB23.xml'\n",
     "balancer = MassChargeCuration(model_path, run_optimization = True, update_ids = True, data_path='../../data/mcc/') #\n",
     "balancer.generate_visual_report().show()"
    ]
